# NEUTvectReader

./: CMakeLists.txt  README.md  run.sh
flux/: 13a_nom_m250kA_tune_138bins.root  13a_nom_p250kA_tune_138bins.root  nd5_nom_numub_o.root
neut_cards/: neut_rs_13a_CH.card  neut_rs_13a_CH_numu.card  neut_rs_13a_CH_numubar.card
src/: SetT2KStyle.H  TotXSPlot.cpp  basic_reader.cc  basic_reader.hh  tools.h
